[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
dioxus = "0.4.3"
futures = "0.3.29"
reqwest = {version = "0.11.22", features = ["json"]}
serde = "1.0.193"

[dev-dependencies]
tokio-test = "0.4.3"
