[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
chrono = {version = "0.4.31", features = ["serde"]}
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
dioxus = { version = "0.4.3", default-features = false, features = ["macro", "hooks", "html"]}
async-recursion = "1.0.5"

[dev-dependencies]
tokio-test = "0.4.3"
